--- a/Schimichino/single.html
+++ b/Schimichino/single.html
@@ -9,6 +9,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="preload" as="script" href="https://cdn.iubenda.com/cs/iubenda_cs.js"/>
+    <link rel="preload" as="script" href="https://cdn.iubenda.com/cs/tcf/stub-v2.js"/>
+    <script src="https://cdn.iubenda.com/cs/tcf/stub-v2.js"></script>
+    <script>
+        (_iub=self._iub||[]).csConfiguration={
+            cookiePolicyId: 91214297,
+            siteId: 2988491,
+            localConsentDomain: 'secretchat.altervista.org',
+            timeoutLoadConfiguration: 30000,
+            lang: 'it',
+            enableTcf: true,
+            tcfVersion: 2,
+            tcfPurposes: {
+                "2": "consent_only",
+                "3": "consent_only",
+                "4": "consent_only",
+                "5": "consent_only",
+                "6": "consent_only",
+                "7": "consent_only",
+                "8": "consent_only",
+                "9": "consent_only",
+                "10": "consent_only"
+            },
+            invalidateConsentWithoutLog: true,
+            googleAdditionalConsentMode: true,
+            consentOnContinuedBrowsing: false,
+            banner: {
+                position: "top",
+                acceptButtonDisplay: true,
+                customizeButtonDisplay: true,
+                closeButtonDisplay: true,
+                closeButtonRejects: true,
+                fontSizeBody: "14px",
+            },
+        }
+    </script>
+    <script async src="https://cdn.iubenda.com/cs/iubenda_cs.js"></script>
+
 </head>  
 <body>
     <header class="header clearfix">
@@ -72,7 +110,8 @@
     </section>
 
     <footer class="footer">
-        <p>Copiright - 2021 ScottiDesign.com</p>
+        <p>Copiright - 2022 scotti.17115@gmail.com</p><a href="https://www.iubenda.com/privacy-policy/91214297" rel="noreferrer nofollow" target="_blank">Privacy Policy</a>
+        - <a href="#" role="button" class="iubenda-advertising-preferences-link">Personalizza tracciamento pubblicitario</a>
 
     </footer>
 
@@ -86,6 +125,13 @@
                 e.preventDefault();
             });
         });
+
+        //funzioe per generare pubblicità
+
+        !function(d,l,e,s,c){e=d.createElement("script");
+            e.src="//ad.altervista.org/js.ad/size=300X250/?ref="+encodeURIComponent(l.hostname+l.pathname)+"&r="+Date.now();
+            s=d.scripts;c=d.currentScript||s[s.length-1];
+            c.parentNode.insertBefore(e,c)}(document,location)
     </script>
 </body>
 </html>
